--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.application.name=api
 # Settings BD
 #spring.datasource.url=${CLEARDB_DATABASE_URL}
 spring.datasource.url=jdbc:mysql://localhost:3306/api
-spring.datasource.username=igor
-spring.datasource.password=admin123
+spring.datasource.username=tadeu    
+spring.datasource.password=1504
+#server.address=0.0.0.0
+#server.port=8080
 
 # Configurações do Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -14,3 +16,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Settings Flyway
 spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=false
